--- a/css/mobile.css
+++ b/css/mobile.css
@@ -31,8 +31,8 @@ section#login {
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: white;
-    width: 250px;
-    height: 500px;
+    width: 251px;
+    height: 515px;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.445);
@@ -60,4 +60,55 @@ div#formulario > h1 {
 
 div#formulario > p {
     font-size: 0.8em;
+} 
+
+form > div.campo {
+    display: block;
+    background-color:  #a050ab;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+div.campo > label {
+    display: none;
+}
+
+form > input[type=submit] {
+    display: block;   
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color:  #49a09d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: #34706e;
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    color: #275352;
+    background-color: white;
+    border: 1px solid #49a09d;
+    border-radius: 5px;
+    margin-top: 5px;
+    text-decoration: none;
+}
+
+form > a.botao:hover {
+    background-color: #64cadc;
+}
+
+form > a.botao span {
+    font-size: 1em;
 }
