--- a/css/midia-query.css
+++ b/css/midia-query.css
@@ -1,50 +1,53 @@
 @charset "UTF-8";
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
-    body {
-        background-image: linear-gradient(to top,  #49a09d, #a050ab 45%);
-    }
+    body { /* Configuração para tablets */
+    background-image: linear-gradient(to top,  #49a09d, #a050ab 45%);
+}
 
-    section#login {
-        width: 80vw;
-    }
-    section#login > div#imagem {
-        float: left;
-        width: 30%;       
-        height: 100%;
-    }
+section#login {
+    width: 80vw;
+    height: 280px;
+}
+section#login > div#imagem {
+    float: left;
+    width: 30%;       
+    height: 100%;
+}
 
-    section#login > div#formulario {
-        float: right;
-        width: 60%;
-    }
+section#login > div#formulario {
+    float: right;
+    width: 60%;
+}
 }
 
 @media screen and (min-width: 992px) {
-    body {
-        background-image: linear-gradient(to top,  #49a09d, #a050ab 45%);
-    }
+    body { /* Configurações Tela */
+    background-image: linear-gradient(to top,  #49a09d, #a050ab 45%);
+}
 
-    section#login {
-        width: 950px;
-    }
+section#login {
+    height: 350px;
+    width: 950px;
+}
 
-    section#login > div#imagem {
-        float: right;
-        width: 50%;
-        height: 100%;
-    }
+section#login > div#imagem {
+    float: right;
+    width: 50%;
+    height: 100%;
+}
 
-    section#login > div#formulario {
-        float: left;
-        width: 50%;
-    }
+section#login > div#formulario {
+    float: left;
+    width: 50%;
+}
 
-    div#formulario > h1 {
-        font-size: 2em;
-    }
+div#formulario > h1 {
+    font-size: 2em;
+}
 
-    div#formulario > p {
-        font-size: 1.2em;
-    }
+div#formulario > p {
+    font-size: 1em;
+    margin: 20px 0px;
+}
 }
